k8s/apps/wavelog/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: wavelog
    app.kubernetes.io/name: wavelog
  name: wavelog
  namespace: wavelog
spec:
  ports:
    - name: http
      port: 8086
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: wavelog
    app.kubernetes.io/name: wavelog
  type: ClusterIP
